# ComfyUI-AssetsPlus

./: .gitignore  .tracking  LICENSE  README.md  __init__.py  pyproject.toml
assets_plus/: api.py  config.py  storage.py
i18n/: en.json  ru.json
web/: assets_plus.js
